--- a/css/new-sections.css
+++ b/css/new-sections.css
@@ -1688,7 +1688,7 @@
   .af-roadmap-period {
     display: block;
     width: 100%;
-    padding: 0 32px;
+    padding: 0 24px;
     margin: 0 0 12px;
     text-align: left;
     font-family: Inter, "Helvetica Neue", Arial, sans-serif;
